# com-etzhayyim-maps

./: .gitignore  CLAUDE.md  README.md  bb.edn  deps.edn  kotoba.app.edn  manifest.edn  run_tests.sh
.well-known/: did.json
data/: seed-spatial-graph.kotoba.edn
data/ingest/: sample-vertex-spatial.json
data/lex/: collectionJob.edn  deviceBinding.edn  displayLayer.edn  feature.edn  geoAlias.edn  jobEvent.edn  layerCoordinator.edn  legalEntity.edn  mapralyPoi.edn  naturalZone.edn  ownership.edn  region.edn  registry.edn  satelliteScene.edn  sensorAlert.edn  source.edn  tileGeoJson.edn  twinState.edn  verticalZone.edn  visionResult.edn  webCrawlGeoEntity.edn
data/ontology/: spatial.edn  transit.edn
docs/: methods.md  wasm.md
methods/: README.md  analyze.cljc  bpmn_run.cljc  bpmn_xml.cljc  coverage_report.cljc  datom_emit.cljc  ingest.cljc  kotoba_local.cljc  kotoba_local_server.cljc  maps3d_tasks.cljc  publish.bb  reverse.cljc  search.cljc  test_bpmn_generic.cljc  test_chunk.cljc  test_kotoba_local.cljc  test_maps3d_bpmn_fidelity.cljc  test_maps3d_persist.cljc  test_methods.cljc  test_reverse.cljc  test_search.cljc  test_transit.cljc  test_verify.cljc  transit.cljc  verify.cljc
rust/: Cargo.toml
rust/src/: lib.rs
schema/: app.edn
scripts/: audit.clj  build_wasm.clj
src/maps/: murakumo.cljc
test/maps/: murakumo_test.cljc  test_analyze.cljc  test_chunk.cljc  test_ingest.cljc  test_onsen.cljc  (+4 more)
tests/: kotoba_local.cljc  test_analyze.cljc  test_ingest.cljc  test_reverse.cljc  test_search.cljc
wire/: actor-manifest.jsonld  maps-core.meta.json
(+240 files in other folders)
